now ar update color

--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@ body,h1,h2,h3,h4,h5,h6,p{
     font-family: 'Work Sans', sans-serif;
 }
 
-.bgc{
-    background-color: #eae7fa88;
+.baaaaagc{
+    background-color: #0f45e4;
 }
-
+.bgc{
+    background-color: #f7f9ff;
+}
 .min-h-font{
     color: #4b4e53;
 }
